proto: prevent required-indicator from wrapping alone

--- a/packages/vaadin-lumo-styles/src/components/form-item.css
+++ b/packages/vaadin-lumo-styles/src/components/form-item.css
@@ -24,9 +24,6 @@
       --vaadin-input-field-required-indicator-color,
       var(--lumo-required-field-indicator-color, var(--lumo-primary-text-color))
     );
-    position: relative;
-    width: 1em;
-    text-align: center;
   }
 
   :host([required]) [part='required-indicator']::after {
